--- a/src/app.css
+++ b/src/app.css
@@ -14,6 +14,11 @@
     --font-family-h2: 'Inter', sans-serif;
 }
 
+body {
+    font-family: var(--font-family-h2);
+    font-size: 0.8rem;
+}
+
 h1 {
     font-family: var(--font-family);
     font-size: 3rem;
