--- a/src/app.css
+++ b/src/app.css
@@ -48,3 +48,17 @@ body {
     margin-left: -12.45rem;
     transform: rotate(-90deg);
 }
+.party-item {
+    position: relative;
+    padding-left: 14px;
+}
+.party-item::before {
+    content: '';
+    position: absolute;
+    top: 1px;
+    left: 0;
+    background-color: var(--color);
+    width: 12px;
+    height: 12px;
+    border-radius: 3px;
+}
