--- a/src/app.css
+++ b/src/app.css
@@ -106,3 +106,16 @@ body {
 img {
     object-fit: contain;
 }
+
+.svg_line {
+    fill: none;
+}
+
+.svg_line path {
+    stroke: var(--color);
+    stroke-width: 2;
+}
+
+.svg_line circle {
+    fill: var(--color);
+}
