--- a/src/app.css
+++ b/src/app.css
@@ -21,9 +21,11 @@ body {
     font-family: var(--font-family-h2);
     font-size: 0.8rem;
     color: #131313;
+    overflow-x: hidden;
 }
 
 h1 {
+    margin-top: 2rem;
     font-family: var(--font-family);
     font-size: 3rem;
     text-align: center;
@@ -38,8 +40,10 @@ h2 {
     text-align: center;
 }
 
-body {
-    overflow-x: hidden;
+h3 {
+    font-family: var(--font-family);
+    font-size: 1.1rem;
+    text-align: center;
 }
 
 #chart-container,
